--- a/sfda/src/main/resources/static/index.html
+++ b/sfda/src/main/resources/static/index.html
@@ -66,6 +66,25 @@
                     </div>
                 </div>
             </div>
+
+            <div class="container collapse" id="successfullogindiv">
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-4">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">User Login</h4>
+                                </div>
+                                <div class="panel-body">
+                                    Welcome to the SFDA Application !!
+                                </div>
+                                <div class="panel-body">
+                                    Your QR Code is https://api.qrserver.com/v1/create-qr-code/?data=login&amp;size=100x100
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -137,6 +156,7 @@
             var logindata = {"email": email, "password": password};
             jQuery.post('http://localhost:8080/api/login/login', logindata, function (data) {
                 console.log("hi");
+                console.log(data);
             });
         });
     });
